[build-system]
requires = ["cython","setuptools>=61","numpy>=1.19.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bpgdg"
description = "Sliding Window with Guided Decimation Guessing (GDG) Decoding"
readme = "README.md"
authors = [
    { name = "A B", email = "a.b@email.com" }
]
license = { file = "LICENSE" }

classifiers = [
    "Development Status :: 4 - Beta",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
    "scipy",
    "tqdm",
]
dynamic = ["version"]

[tool.cibuildwheel]
build = "cp3*"
skip = "*-musllinux*"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]